# FigureChain

./: .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260604_0001_create_figure_data_schema.py  20260608_0001_create_encounter_review_tables.py  20260613_0001_create_ai_foundation_tables.py  20260613_0002_create_ai_candidate_review_suggestions.py  20260613_0003_create_ai_chain_explanations.py  20260613_0004_create_ai_retrieval_tables.py  20260618_0001_create_ai_generation_jobs.py  20260619_0001_create_chain_share_snapshots.py  20260619_0002_extend_ai_jobs_for_rq.py  20260619_0003_ai_observability_prompt_versioning.py  20260619_0004_create_graph_projection_batches.py  20260620_0001_create_admin_operations.py
docs/operations/: stage5-runtime-runbook.md
figure-data/: cbdb_20260530.json
frontend/: .env.local.example  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
src/figure_chain/: __init__.py  access.py  app.py  dependencies.py  errors.py  schemas.py
src/figure_data/: cli.py  config.py
tests/: __init__.py  test_config.py  test_env_example.py  test_package_import.py  test_readme_commands.py  test_runtime_cli.py
tests/admin/: test_operation_runner.py  test_operations_repository.py  test_resource_preview.py  test_resource_query.py  test_resource_registry.py
tests/ai/: test_ai_cli.py  test_candidate_context.py  test_candidate_formatting.py  test_candidate_policy.py  test_candidate_prompt_schema.py  test_candidate_repository.py  test_candidate_service.py  test_candidate_suggestion_cli.py  test_chain_context.py  test_chain_explanation_cli.py  test_chain_formatting.py  test_chain_hash.py  test_chain_policy.py  test_chain_prompt_schema.py  test_chain_repository.py  test_chain_service.py  test_embedding_provider.py  test_evaluation_cli.py  test_evaluation_loader.py  test_evaluation_reporting.py  test_evaluation_scoring.py  test_evaluation_types.py  test_formatting.py  (+31 more)
(+518 files in other folders)
